--- a/views/404/index.ejs
+++ b/views/404/index.ejs
@@ -7,6 +7,6 @@
     <title>Page Not Found</title>
 </head>
 <body>
-    <p>Page Not Found</p>
+    <p class="notfound">Page Not Found</p>
 </body>
 </html>
