--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -7,6 +7,6 @@
     <title>Cwaqf</title>
 </head>
 <body>
-    <p>Hello, the server is runing </p>
+    <p class="server">Hello, the server is runing </p>
 </body>
 </html>
